--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/db
+
 # dependencies
 /node_modules
 /.pnp
@@ -39,3 +41,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+client_secret_865822278856-k4d8jjjkh70b35v46itg3hf49f4n51tg.apps.googleusercontent.com.json
